# OpenTESArena

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  AUTHORS.txt  CMakeLists.txt  CONTRIBUTING.md  COPYING.txt  LICENSE  LICENSE.txt  OpenTESArena.sln  README.md  conanfile.py  conanfile.txt  setup_opentesarena.bat
CI/: install.linux.sh  (+3 more)
OpenTESArena/: CMakeLists.txt  OpenTESArena.vcxproj  OpenTESArena.vcxproj.filters  resource.h
OpenTESArena/include/: Note.txt
OpenTESArena/lib/: Note.txt
OpenTESArena/src/: Main.cpp
OpenTESArena/src/Algorithms/: BinaryTree.h
OpenTESArena/src/Assets/: ArenaAnimUtils.cpp  ArenaAnimUtils.h  ArenaAssetUtils.h  ArenaLevelLibrary.cpp  ArenaLevelLibrary.h  ArenaPaletteName.h  ArenaPortraitUtils.cpp  ArenaPortraitUtils.h  ArenaSave.cpp  ArenaSave.h  ArenaSoundName.h  ArenaTextureName.h  ArenaTypes.cpp  ArenaTypes.h  AssetUtils.h  BinaryAssetLibrary.cpp  BinaryAssetLibrary.h  CFAFile.cpp  CFAFile.h  CIFFile.cpp  CIFFile.h  COLFile.cpp  COLFile.h  CityDataFile.cpp  CityDataFile.h  Compression.cpp  Compression.h  DFAFile.cpp  DFAFile.h  ExeData.cpp  ExeData.h  ExeStrings.cpp  ExeStrings.h  ExeTypes.cpp  ExeTypes.h  ExeUnpacker.cpp  ExeUnpacker.h  FLCFile.cpp  FLCFile.h  FontFile.cpp  (+42 more)
OpenTESArena/src/Audio/: AudioManager.cpp  AudioManager.h  Midi.h  MusicDefinition.cpp  MusicDefinition.h  MusicLibrary.cpp  MusicLibrary.h  MusicUtils.cpp  MusicUtils.h  SoundLibrary.cpp  SoundLibrary.h  WildMidi.cpp  WildMidi.h
OpenTESArena/src/Collision/: ArenaSelectionUtils.cpp  ArenaSelectionUtils.h  CollisionChunk.cpp  CollisionChunk.h  CollisionChunkManager.cpp  CollisionChunkManager.h  CollisionMeshDefinition.cpp  CollisionMeshDefinition.h  CollisionMeshInstance.cpp  CollisionMeshInstance.h  CollisionShapeDefinition.cpp  CollisionShapeDefinition.h  CollisionUtils.h  Physics.cpp  Physics.h  PhysicsBodyActivationListener.cpp  PhysicsBodyActivationListener.h  PhysicsContactListener.cpp  PhysicsContactListener.h  PhysicsLayer.cpp  PhysicsLayer.h  RayCastTypes.cpp  RayCastTypes.h  SelectionUtils.h
OpenTESArena/src/Combat/: CombatLogic.cpp  CombatLogic.h
OpenTESArena/src/Entities/: Animation.cpp  Animation.h  ArenaAnimUtils.cpp  ArenaAnimUtils.h  ArenaCitizenUtils.h  ArenaEntityUtils.cpp  ArenaEntityUtils.h  AttributeModifier.cpp  AttributeModifier.h  AttributeModifierName.h  BodyPart.cpp  BodyPart.h  BodyPartName.h  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  CharacterClass.cpp  CharacterClass.h  CharacterClassCategory.cpp  CharacterClassCategory.h  CharacterClassCategoryName.h  CharacterClassDefinition.cpp  CharacterClassDefinition.h  CharacterClassLibrary.cpp  CharacterClassLibrary.h  CharacterClassName.h  CharacterClassParser.cpp  CharacterClassParser.h  CharacterEquipment.cpp  CharacterEquipment.h  CharacterGender.cpp  CharacterGender.h  CharacterGenderName.h  CharacterRace.cpp  CharacterRace.h  CharacterRaceDefinition.h  CharacterRaceLibrary.cpp  CharacterRaceName.h  CitizenManager.cpp  (+75 more)
OpenTESArena/src/Game/: ArenaClockUtils.cpp  ArenaClockUtils.h  CardinalDirection.cpp  CardinalDirection.h  CardinalDirectionName.h  CharacterClassGeneration.cpp  CharacterClassGeneration.h  CharacterCreationState.cpp  CharacterCreationState.h  CharacterQuestion.cpp  CharacterQuestion.h  Clock.cpp  Clock.h  ClockLibrary.cpp  ClockLibrary.h  Collider3D.cpp  Collider3D.h  Collider3D_UnitTests.cpp  Date.cpp  Date.h  DateUtils.cpp  DateUtils.h  Game.cpp  Game.h  GameData.cpp  GameData.h  GameState.cpp  GameState.h  Guild.cpp  Guild.h  GuildName.h  Holiday.cpp  Holiday.h  HolidayName.h  InputManager.cpp  InputManager.h  Month.cpp  Month.h  MonthName.h  Options.cpp  (+11 more)
OpenTESArena/src/GameLogic/: MapLogicController.cpp  MapLogicController.h  PlayerLogicController.cpp  PlayerLogicController.h
OpenTESArena/src/Input/: ApplicationEvents.h  InputActionDefinition.cpp  InputActionDefinition.h  InputActionEvents.cpp  InputActionEvents.h  InputActionMap.cpp  InputActionMap.h  InputActionMapName.h  InputActionName.h  InputActionType.h  InputManager.cpp  InputManager.h  InputStateType.h  PointerEvents.h  PointerTypes.h  TextEvents.h
OpenTESArena/src/Interface/: AutomapPanel.cpp  AutomapPanel.h  AutomapUiController.cpp  AutomapUiController.h  AutomapUiMVC.cpp  AutomapUiMVC.h  AutomapUiModel.cpp  AutomapUiModel.h  AutomapUiState.cpp  AutomapUiState.h  AutomapUiView.cpp  AutomapUiView.h  Button.cpp  Button.h  CharacterCreationUiController.cpp  CharacterCreationUiController.h  CharacterCreationUiMVC.cpp  CharacterCreationUiMVC.h  CharacterCreationUiModel.cpp  CharacterCreationUiModel.h  CharacterCreationUiView.cpp  CharacterCreationUiView.h  CharacterEquipmentPanel.cpp  CharacterEquipmentPanel.h  CharacterEquipmentUiState.cpp  CharacterEquipmentUiState.h  CharacterPanel.cpp  CharacterPanel.h  CharacterSheetUiController.cpp  CharacterSheetUiController.h  CharacterSheetUiMVC.cpp  CharacterSheetUiMVC.h  CharacterSheetUiModel.cpp  CharacterSheetUiModel.h  CharacterSheetUiView.cpp  CharacterSheetUiView.h  CharacterUiState.cpp  CharacterUiState.h  ChooseAttributesPanel.cpp  ChooseAttributesPanel.h  (+222 more)
apps/OpenTESArena/: CMakeLists.txt
components/: CMakeLists.txt
components/CL/: cl2.cpp  cl2.hpp
components/archives/: archive.cpp  archive.hpp  bsaarchive.cpp  bsaarchive.hpp
components/debug/: Debug.cpp  Debug.h
components/dos/: DOSUtils.h
components/misc/: fnmatch.c  fnmatch.cpp  fnmatch.h
components/storefront/: SteamKeyValueFile.cpp  SteamKeyValueFile.h  SteamUtils.cpp  SteamUtils.h
components/utilities/: Allocator.h  Buffer.h  Buffer2D.h  Buffer3D.h  BufferRef.h  BufferRef2D.h  BufferView.h  BufferView2D.h  BufferView2DReadOnly.h  BufferView3D.h  BufferViewReadOnly.h  BumpAllocator.h  Bytes.cpp  Bytes.h  Directory.cpp  Directory.h  Enum.h  FPSCounter.cpp  FPSCounter.h  File.cpp  File.h  FixedPool.h  FlatMap.h  Heap.cpp  Heap.h  HeapView.cpp  HeapView.h  HexPrinter.cpp  HexPrinter.h  JobSystem.h  KeyValueFile.cpp  KeyValueFile.h  KeyValuePool.h  ObjFile.cpp  ObjFile.h  Path.cpp  Path.h  Profiler.cpp  Profiler.h  RecyclablePool.h  (+17 more)
components/vfs/: manager.cpp  manager.hpp
(+968 files in other folders)
